Fixed resizing causing image to overflow

--- a/styles.css
+++ b/styles.css
@@ -17,21 +17,20 @@ h1 {
     text-align: center;
     font-size: 3em;
     font-weight: 900;
-    margin-bottom: 0.4em;
 }
 
 img {
     display: block;
     margin: 0 auto;
     border-radius: 1em;
-    max-width: 90vw;
+    min-width: 0;
+    min-height: 0;
+    max-width: 90vw; 
     max-height: 90vh;
+
 } 
 
 section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     height: 100vh;
     scroll-snap-align: start;
 }
@@ -40,5 +39,12 @@ section {
     scroll-snap-type: y mandatory;
     height: 100vh;
     overflow-y: scroll;
+}
+
+.flex-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.4em;
 }
 
